--- a/rap.html
+++ b/rap.html
@@ -103,7 +103,7 @@ text-align: center;
     </div>
     <div class="col-md-6">
 <br>
-<h1 align="center">I found a problem - now what?</h1>
+<h1 align="center">I found a problem!<br>Now what?</h1>
 <div class="center">
 <br>Glad you asked! Send me an email to report the undocumented feature you've discovered:<br>
 
