--- a/lpd.html
+++ b/lpd.html
@@ -57,25 +57,25 @@ text-align: center;
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="htu.html" target="_blank">How to use</a>
+              <a class="nav-link" href="htu.html">How to use</a>
             </li> 
              <li class="nav-item">
               <a class="nav-link"> | </a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link" href="lpd.html" target="_blank">LandingPage Details</a>
+              <a class="nav-link" href="lpd.html">LandingPage Details</a>
             </li> 
              <li class="nav-item">
               <a class="nav-link"> | </a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link" href="edmd.html" target="_blank">Email Details</a>
+              <a class="nav-link" href="edmd.html">Email Details</a>
             </li>
             <li class="nav-item">
               <a class="nav-link"> | </a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link" href="rap.html" target="_blank">Report a Problem</a>
+              <a class="nav-link" href="rap.html">Report a Problem</a>
             </li>
           </ul>
         </div>
