--- a/lpd.html
+++ b/lpd.html
@@ -113,7 +113,7 @@ text-align: center;
 <br>
 </div>
 <div class="center">
-<img src="details/LandingPage.png"  style="width:60%">
+<img src="details/landingpage.png"  style="width:60%">
 </div>
 <br><br><br><br>
 <div class="center">
