--- a/beta/previews/email.html
+++ b/beta/previews/email.html
@@ -111,7 +111,7 @@ div[style*="margin: 16px 0;"] { margin: 0 !important; }
 
 
 <p style="color: #999999; font-size: 16px; line-height: 24px; margin: 0;">Marketing automation is a software platform that helps you automate your marketing and sales engagement to generate more leads, close more deals, and accurately measure marketing success.<br>&nbsp;</p>
-<p style="color: #999999; font-size: 16px; line-height: 24px; margin: 0;">Marketing Automation Overview
+<p style="color: #999999; font-size: 16px; line-height: 24px; margin: 0;">
 Different types of companies, from SMB to enterprise, have their own way of finding new leads, nurturing them, and turning them into customers. However, like most solutions in a company’s martech stack, marketing automation platforms aren’t one-size-fits-all, especially in B2B.<br>&nbsp;</p>
 
 
